# FocalDiffusion

./: .gitignore  CODEX_CLEANUP_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  hypersim.yaml  mixed.yaml  virtual_kitti.yaml
data/filelists/: README.md  hypersim_test.txt  hypersim_train.txt  hypersim_val.txt  test.txt  train.txt  val.txt  vkitti_test.txt  vkitti_train.txt  vkitti_val.txt
script/: evaluate.py  evaluate_reliability.py  git_pull_rescue.py  git_status_helper.py  git_sync_helper.py  inference.py  train.py
script/utils/: __init__.py  yaml_loader.py
src/: __init__.py  generation_tasks.py
src/data/: __init__.py  augmentation.py  dataset.py  focal_coordinates.py  focal_simulator.py  synthetic_focal_stack_renderer.py
src/legacy/: __init__.py  mmdit_focal.py
src/models/: __init__.py  attention_modules.py  camera_invariant.py  defocus_physics.py  dual_decoder.py  focal_attention.py  focal_evidence.py  focal_evidence_encoder.py  focal_processor.py  mmdit_focal.py  physics_modules.py  task_output_decoder.py  verification_trace.py
src/pipelines/: __init__.py  focal_diffusion_pipeline.py  focal_stack_generation_pipeline.py  pipeline_utils.py
src/training/: __init__.py  checkpointing.py  losses.py  optimizers.py  sd3_objective.py  trainer.py  validation.py
src/utils/: __init__.py  camera_utils.py  env_utils.py  image_utils.py  metrics.py  visualization.py
tests/: test_evaluate_trace_metrics.py  test_focal_coordinates.py  test_focal_evidence.py  test_focal_injected_transformer.py  test_joint_refinement.py  test_smoke.py  test_zero_shot_cleanup.py
