[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focaldiffusion"
version = "0.1.0"
description = "All-in-focus image and metric depth recovery from focal stacks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "diffusers>=0.28.0",
  "transformers>=4.40.0",
  "accelerate>=0.30.0",
  "numpy>=1.24",
  "Pillow>=10.0.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "huggingface_hub>=0.23",
]

[tool.setuptools.packages.find]
include = ["src*", "script*"]
