[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focaldiffusion"
version = "0.1.0"
description = "All-in-focus image and canonical focal-depth recovery from focal stacks; metric depth is available only in calibrated mode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "diffusers>=0.28.0",
  "transformers>=4.40.0",
  "numpy>=1.24",
  "Pillow>=10.0.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
  "accelerate>=0.30.0",
  "peft>=0.10.0",
  "huggingface_hub>=0.23",
  "wandb>=0.16.0",
  "sentencepiece>=0.2.0",
]
datasets = [
  "opencv-python>=4.8.0",
  "h5py>=3.10.0",
  "exifread>=3.0.0",
]
evaluation = [
  "matplotlib>=3.8.0",
  "lpips>=0.1.4",
  "scikit-learn>=1.3",
]
development = [
  "pytest>=8",
  "ruff>=0.5",
  "pyright>=1.1",
  "coverage>=7",
]

[tool.setuptools.packages.find]
include = ["src", "src.*", "script", "script.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "script", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "script", "tests"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

[tool.coverage.run]
source = ["src", "script"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
